# sea-wave

./: .gitignore  CMakeLists.txt  README.md  backtest_api  build.sh  main.cpp  run.sh
config/: default_config.json
include/: BacktestController.h  DataFetcher.h  Ichimoku.h  OHLC.h  Renko.h  Strategy.h  Trade.h  strategy_api.h  strategy_engine.h  strategy_types.h
include/backtest/: data_fetcher.hpp  ichimoku.hpp  renko.hpp  strategy.hpp  types.hpp  utils.hpp
scripts/: build.sh  run.sh  test_api.sh
src/: api.cpp  data_fetcher.cpp  ichimoku.cpp  main.cpp  renko.cpp  strategy.cpp  strategy_api.cpp  strategy_engine.cpp  utils.cpp
